--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,18 @@ div.hwrapper { overflow: hidden; width: inherit; }
 strong { font-style: bold; }
 */
 
+ ul li h3 {
+white-space: normal !important;
+white-space: pre !important; /* CSS 2.0 */
+white-space: pre-wrap !important; /* CSS 2.1 */
+white-space: pre-line !important; /* CSS 3.0 */
+white-space: -pre-wrap !important; /* Opera 4-6 */
+white-space: -o-pre-wrap !important; /* Opera 7 */
+white-space: -moz-pre-wrap !important; /* Mozilla */
+white-space: -hp-pre-wrap !important; /* HP Printers */
+word-wrap:break-word;
+overflow-wrap: break-word;
+}
 
 .hwrapper .header {
 	text-align: center;
